testcases/pos/type/function_and_params_known.bard
((n: Int) => n + 1)(41)
