testcases/neg/type/calling_fun_wrong_number_of_args.bard
((n: Int) => n + 1)(3, 4)
